--- a/mini-ola-backend/.env.example
+++ b/mini-ola-backend/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>/<db>?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<>:<password>@<cluster>/<db>?retryWrites=true&w=majority
 
 # JWT
 JWT_SECRET=change_this_in_local_env
