--- a/mini-ola-backend/package.json
+++ b/mini-ola-backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:drop-users": "node scripts/drop-users.js",
+    "db:drop-riders": "node scripts/drop-riders.js"
   },
   "keywords": [
     "cab",
