--- a/mini-ola-backend/package.json
+++ b/mini-ola-backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "migrate:split-users": "node scripts/migrate-users-split.js",
+    "migrate:rename-users": "node scripts/rename-users-to-riders.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
