--- a/mini-ola-backend/package.json
+++ b/mini-ola-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --runInBand",
     "db:drop-users": "node scripts/drop-users.js",
     "db:drop-riders": "node scripts/drop-riders.js"
   },
@@ -37,6 +37,8 @@
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0"
   }
 }
