--- a/mini-ola-backend/package.json
+++ b/mini-ola-backend/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "mongodb-memory-server": "^10.1.4"
   }
 }
