Fixed CICD by pointing the cache to the correct package-lock in each subproject

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,13 +18,14 @@ jobs:
         working-directory: mini-ola-frontend
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-frontend/package-lock.json
 
       - name: Install frontend deps
         run: npm ci
@@ -62,6 +63,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-backend/package-lock.json
 
       - name: Install backend deps
         run: npm ci
@@ -125,6 +127,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-backend/package-lock.json
 
       - name: Lint backend (strict)
         working-directory: mini-ola-backend
@@ -157,6 +160,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-backend/package-lock.json
 
       - name: Install backend deps (audit)
         working-directory: mini-ola-backend
