--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-backend/package-lock.json
 
       - name: Install backend dependencies
         run: |
@@ -71,22 +72,16 @@ jobs:
           # Run tests that don't require private secrets; some tests may fail/skip
           npm test -- --testTimeout=30000 || true
 
-      - name: Upload backend coverage (optional)
-        continue-on-error: true
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./mini-ola-backend/coverage/coverage-final.json
-          flags: backend
-          token: ${{ secrets.CODECOV_TOKEN }}
+
 
       - name: Start backend for smoke test
         env:
           MONGODB_URI: mongodb://localhost:27017/mini-ola-test
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          JWT_SECRET: test_ci_secret
           NODE_ENV: production
           PORT: 5000
         run: |
-          node src/server.js &
+          node src/server.js > server.log 2>&1 &
           echo $! > server.pid
           sleep 5
 
@@ -120,6 +115,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: mini-ola-frontend/package-lock.json
 
       - name: Install frontend dependencies
         run: |
