--- a/mini-ola-backend/package.json
+++ b/mini-ola-backend/package.json
@@ -27,22 +27,23 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.21.0",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "supertest": "^7.1.1",
-    "mongodb-memory-server": "^10.1.4"
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.0.1",
+    "supertest": "^7.1.1"
   }
 }
